# clean-cpp

./: CMakeLists.txt  README.md  build
src/: Main.cpp
